# EmotionQuant-gamma

./: .cursorindexingignore  .env.example  .gitignore  AGENTS.en.md  AGENTS.md  CLAUDE.en.md  CLAUDE.md  README.en.md  README.md  ROOT-FILES-CHECK-REPORT.md  WARP.en.md  WARP.md  main.py  pyproject.toml
.githooks/: pre-commit
.kiro/: README.md
.kiro/record/: debts.md  development-status.md  reusable-assets.md
.kiro/roadmap/: README.md  roadmap.md  spec-01-data-layer.md  spec-02-selector.md  spec-03-strategy.md  spec-04-broker.md  spec-05-backtest-report.md  v0.01-mvp-spec-02-selector.md  v0.01-mvp-spec-03-strategy.md  v0.01-mvp-spec-04-broker.md  v0.01-mvp-spec-05-backtest-report.md
.kiro/steering/: 6A-WORKFLOW.md  a-stock-rules.md  architecture.md  conventions.md  product.md
archives/: all-docs-20260304.sha256.txt
blueprint/: 00-doc-reorganization-todolist-20260308.md  README.md
blueprint/01-full-design/: 01-cross-version-object-mapping-matrix-20260308.md  01-selector-contract-annex-20260308.md  02-mainline-design-atom-gap-checklist-20260308.md  02-pas-trigger-registry-contract-annex-20260308.md  03-irs-lite-contract-annex-20260308.md  03-selector-contract-supplement-20260308.md  04-mss-lite-contract-annex-20260308.md  04-pas-trigger-bof-contract-supplement-20260308.md  05-broker-risk-contract-annex-20260308.md  05-irs-lite-contract-supplement-20260308.md  06-mss-lite-contract-supplement-20260308.md  06-pas-minimal-tradable-design-20260309.md  07-broker-risk-contract-supplement-20260308.md  07-irs-minimal-tradable-design-20260309.md  08-mss-minimal-tradable-design-20260309.md  08-pas-minimal-tradable-design-20260309.md  09-irs-minimal-tradable-design-20260309.md  09-mainline-system-operating-baseline-20260309.md  10-mss-minimal-tradable-design-20260309.md  10-pas-algorithm-from-alpha-v3.2.0.md  11-design-source-register-20260309.md  90-design-source-register-appendix-20260309.md  91-cross-version-object-mapping-reference-20260308.md  92-mainline-design-atom-closure-record-20260308.md  README.md
blueprint/02-implementation-spec/: 01-current-mainline-implementation-spec-20260308.md
blueprint/03-execution/: 00-current-dev-data-baseline-20260311.md  01-current-mainline-execution-breakdown-20260308.md  02-phase-0-contract-trace-card-20260309.md  03-phase-1-pas-card-20260309.md  03.5-phase-1.5-stabilization-card-20260310.md  04-phase-2-irs-card-20260309.md  05-phase-3-mss-card-20260309.md  06-phase-4-gate-card-20260309.md  06.1-phase-4.1-mss-broker-remediation-card-20260311.md  07-phase-5-research-line-migration-package-card-20260315.md  08-phase-5a-normandy-migration-boundary-absorption-card-20260315.md  09-phase-5b-positioning-migration-boundary-absorption-card-20260315.md  10-phase-5c-mainline-no-fake-governance-patch-card-20260315.md  11-phase-6-unified-default-system-migration-package-card-20260317.md  12-phase-6a-promoted-subset-freeze-card-20260317.md  13-phase-6b-integrated-end-to-end-validation-card-20260317.md  14-phase-6c-unified-operating-runbook-refresh-card-20260317.md  15-phase-7-data-provider-refactor-card-20260317.md  16-phase-8-data-contract-residual-audit-card-20260318.md  (+12 more)
blueprint/99-diagrams/: README.md  (+5 more)
docs/: README.md  REORGANIZATION-COMPLETE-REPORT.md  design-migration-boundary.md
gene/: README.md
normandy/: README.md
positioning/: README.md
scripts/: README.md
src/: __init__.py  config.py  contracts.py  logging_utils.py  run_metadata.py
tests/: README.md  conftest.py  test_cleaner.py  test_contracts.py  test_selector_strategy.py  test_store.py
(+909 files in other folders)
