[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emotionquant"
version = "0.1.0"
description = "Emotion-driven quantitative trading system for China A-shares market"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "EmotionQuant Project"}
]
urls = {Repository = "https://github.com/everything-is-simple/EmotionQuant-gamma"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    # 数据处理
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    # 数据源（TuShare 主 + AKShare 备）
    "tushare>=1.2.89",
    "baostock>=0.8.9",
    "mootdx",
    "akshare>=1.10.0",
    # 存储
    "duckdb>=0.9.0",
    "pyarrow>=10.0.0",
    # 回测引擎（v0.01 唯一引擎）
    "backtrader>=1.9.78.123",
    # 模块边界契约
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # 日志
    "loguru>=0.7.0",
    # 网络重试
    "tenacity>=8.0.0",
    # 环境变量
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
gui = [
    # GUI 延后（v0.02+ 阶段再启用）
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
]
visualization = [
    "altair>=5.0.0",
]
fileops = [
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "openpyxl>=3.1.0",
    "XlsxWriter>=3.2.0",
    "pyxlsb>=1.0.10",
    "msoffcrypto-tool>=6.0.0",
    "reportlab>=4.4.0",
    "pdfplumber>=0.11.0",
    "pypdf>=6.0.0",
    "PyMuPDF>=1.27.0",
    "pywin32>=311; platform_system == 'Windows'",
    "ghostscript>=0.8.1",
    "psd-tools>=1.14.0",
]
full = [
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "altair>=5.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
# 入口点：python main.py fetch/build/backtest/run（architecture-master §3）
eq = "main:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers -p no:cacheprovider"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "smoke: Minimal runtime smoke tests",
]


[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E203", "E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/**/*.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]


